examples/neg/recursive.pcl
program recursive;

procedure recursive();
begin
  recursive();
end;

begin
  recursive();
end.
